[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/world/levels/RoomShape.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/proto/Clock.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/bird/BirdSpawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/world/levels/Level.gd" type="Script" id=6]
[ext_resource path="res://static/moon.png" type="Texture" id=8]
[ext_resource path="res://static/moon_glow.png" type="Texture" id=9]
[ext_resource path="res://src/ui/UI.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D emission_teture;
uniform vec4 glow_color : hint_color = vec4(1.0);

void fragment()
{
	vec4 current_color = texture(TEXTURE, UV); // what's our current sprite pixel
	vec4 emission_color = texture(emission_teture, UV); // what's our current emission pixel
	
	if(emission_color.r > 0.0) {
		COLOR = (emission_color + glow_color) // add brightness corrosponding with the emission pixel
	} else {
		COLOR = current_color; // we arent over an emission pixel leave alone
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/glow_color = Color( 1, 0, 0, 1 )
shader_param/emission_teture = ExtResource( 9 )

[node name="Level" type="Node"]
script = ExtResource( 6 )

[node name="Moon" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 272, 32 )
texture = ExtResource( 8 )

[node name="Clock" parent="." instance=ExtResource( 4 )]
position = Vector2( 160, 96 )
__meta__ = {
"_edit_group_": true
}
offset = 90.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 184, 56 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" parent="Player" index="0"]
editor_draw_screen = false
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="MainRoomShape" parent="." instance=ExtResource( 3 )]
visible = false

[node name="BirdSpawnerRight" parent="." instance=ExtResource( 5 )]
position = Vector2( 352, 112 )
bird_velocity = Vector2( -1, 0 )
bird_speed = 50

[node name="BirdSpawnerLeft" parent="." instance=ExtResource( 5 )]
position = Vector2( -32, 72 )
bird_velocity = Vector2( 1, 0 )
bird_speed = 50

[node name="BirdSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="UI" parent="." instance=ExtResource( 10 )]

[connection signal="timeout" from="BirdSpawnTimer" to="." method="_on_BirdSpawnTimer_timeout"]

[editable path="Player"]
[editable path="MainRoomShape"]
